[package]
name = "bn254"
version = "0.1.0"
description = "Open source implementation of Barreto-Naehrig (BN) aggregate signatures written in Rust"
keywords = ["bn254", "Barreto-Naehrig", "bn256", "alt-bn128", "bn128", "bls"]
categories = ["algorithms", "cryptography"]

license = "MIT"
edition = "2021"
homepage = "https://github.com/sedaprotocol/bn254"
documentation = "https://docs.rs/bn254/"
repository = "https://github.com/sedaprotocol/bn254"
readme = "README.md"

[dependencies]
bn = { package = "substrate-bn", version = "0.6.0" }
byteorder = "1.4.3"
rand = "0.8.5"
serde_json = "1.0.92"
sha2 = "0.10.6"
thiserror = "1.0.38"

[dev-dependencies]
hex = "0.4.2"
