[package]
name = "bn254"
version = "0.0.1"
description = "Open source implementation of Barreto-Naehrig (BN) aggregate signatures written in Rust"
keywords = ["bn254", "bn", "bn256", "bn128", "bls"]
categories = ["cryptography", "crypto", "algorithms"]

license = "MIT"
edition = "2021"
homepage = "https://github.com/sedaprotocol/bn254"
documentation = "https://docs.rs/bn254/"
repository = "https://github.com/sedaprotocol/bn254"
readme = "README.md"

[dependencies]
bn = { package = "zeropool-bn", version = "0.5.11", features = [] }
byteorder = "1.4"
rand = { version = "0.8", default-features = false }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
