[package]
name = "bn254"
version = "0.0.1"
description = "Open source implementation of Barreto-Naehrig (BN) aggregate signatures written in Rust"
keywords = ["bn254", "bn", "bn256", "bn128", "bls"]
categories = ["cryptography", "crypto", "algorithms"]

license = "MIT"
edition = "2021"
homepage = "https://github.com/sedaprotocol/bn254"
documentation = "https://docs.rs/bn254/"
repository = "https://github.com/sedaprotocol/bn254"
readme = "README.md"

[features]
default = []
serde = []

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bn = { package = "zeropool-bn", features = [] }
borsh = "0.9"
byteorder = "1.4"
rand = { version = "0.8", default-features = false }
serde = { version = "1.0", optional = false }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
serde_json = "1.0.94"
